Add unit tests, utility scripts, and package-lock.json
- Created AuthServiceTest class with a successful test case.
- Added utility scripts for counting braces and parsing Admin.jsx.
- Introduced package-lock.json for dependency management.